syntax = "proto3";
 
package account;

option go_package = ".;account";

message DepositRequest {
    float amount = 1;
}
 
message DepositResponse {
    bool ok = 1;
}

service DepositService {
    rpc Deposit(DepositRequest) returns (DepositResponse) {}
}